# confidence-resolver

./: .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  STICKY_ASSIGNMENTS.md  UNIT_LOCAL_RESOLVER.md  docker-compose.yml  release-please-config.json
.github/workflows/: CLAUDE.md  base-images.yml  ci.yml  codeql.yml  lint-pr-name.yaml  release-please.yml  test-native-arm-build.yml
confidence-cloudflare-resolver/: CHANGELOG.md  CLAUDE.md  Cargo.toml  wrangler.toml
confidence-cloudflare-resolver/deployer/: README.md  decrypt_state.js  script.sh
confidence-cloudflare-resolver/src/: lib.rs  materialization.rs  sticky_do.rs
confidence-flag-log-ingest/: Cargo.toml  wrangler.toml
confidence-flag-log-ingest/src/: lib.rs
confidence-resolver/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
confidence-resolver/protos/confidence/api/: annotations.proto
confidence-resolver/protos/confidence/flags/admin/v1/: resolver.proto  types.proto
confidence-resolver/protos/confidence/flags/resolver/v1/: api.proto  internal_api.proto  types.proto  wasm_api.proto
confidence-resolver/protos/confidence/flags/types/v1/: target.proto
confidence-resolver/protos/confidence/iam/v1/: iam.proto
confidence-resolver/protos/confidence/shared/v1/: materialization_operations.proto
confidence-resolver/src/: assign_logger.rs  bloom_filter.rs  bounded_set.rs  diamond_dependency_tests.rs  err.rs  event_logger.rs  flag_logger.rs  lib.rs  materialization_tests.rs  proto.rs  resolve_logger.rs  resolver_spec_tests.rs  slicer.rs  telemetry.rs  value.rs  version.rs
confidence-resolver/test-payloads/: bloom_filter_thousand_users.base64  resolver_state_with_custom_targeting_flag.pb  resolver_state_with_multiple_sticky_flags.pb
confidence-resolver/test-payloads/resolver-spec/: state.json  tests.json
confidence-resolver/tests/: per_user_slice.rs
data/: encryption_key_test.hex
docker/: java-base.Dockerfile  rust-base.Dockerfile
mock-support-server/: go.mod  go.sum  main.go
openfeature-provider/: INTEGRATION_GUIDE.md
openfeature-provider/android/: .gitignore  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
openfeature-provider/android/confidence-provider/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
openfeature-provider/android/demo-app/: build.gradle.kts
openfeature-provider/android/gradle/: libs.versions.toml
openfeature-provider/cloudflare/: PLAN.md
openfeature-provider/go/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum
openfeature-provider/go/bench/: go.mod  go.sum  main.go
openfeature-provider/go/confidence/: e2e_test.go  event_sender.go  flag_logger.go  flag_logger_e2e_test.go  flag_logs_test.go  grpc_event_sender.go  inmemory_materialization_store.go  integration_test.go  materialization.go  materialization_store.go  materialization_test.go  provider.go  provider_builder.go  provider_errors_test.go  provider_resolve_test.go  provider_test.go  remote_materialization_store.go  remote_materialization_store_test.go  retry.go  retry_test.go  state_fetcher.go  state_fetcher_test.go  unmarshal_proto.go  unmarshal_proto_test.go  unsupported_materialization_store.go  version.go
openfeature-provider/go/demo/: README.md  go.mod  go.sum  main.go
openfeature-provider/go/scripts/: generate_proto.sh
openfeature-provider/java/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pom.xml
openfeature-provider/js/: .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README-NEXTJS.md  README-REACT.md  README.md  demo.mjs  package.json  telemetry_demo.mts  tsconfig.json  tsdown.config.ts
openfeature-provider/python/: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
openfeature-provider/python/src/confidence/: __init__.py  flag_logger.py  local_resolver.py  materialization.py  provider.py  state_fetcher.py  version.py  wasm_resolver.py
openfeature-provider/python/src/confidence/proto/confidence/flags/admin/v1/: resolver_pb2.py  resolver_pb2_grpc.py
openfeature-provider/python/src/confidence/proto/confidence/flags/resolver/v1/: api_pb2.py  api_pb2_grpc.py  internal_api_pb2.py  internal_api_pb2_grpc.py  types_pb2.py  types_pb2_grpc.py
openfeature-provider/python/src/confidence/proto/confidence/flags/types/v1/: target_pb2.py  target_pb2_grpc.py  types_pb2.py
openfeature-provider/python/src/confidence/proto/confidence/wasm/: messages_pb2.py  messages_pb2_grpc.py  wasm_api_pb2.py  wasm_api_pb2_grpc.py
openfeature-provider/python/src/confidence_openfeature/: __init__.py  flag_logger.py  local_resolver.py  materialization.py  provider.py  state_fetcher.py  wasm_resolver.py
openfeature-provider/python/src/confidence_openfeature/proto/confidence/flags/resolver/v1/: api_pb2.py  api_pb2_grpc.py
openfeature-provider/python/src/confidence_openfeature/proto/confidence/flags/types/v1/: types_pb2_grpc.py
openfeature-provider/python/src/confidence_openfeature/proto/confidence/wasm/: messages_pb2.py
openfeature-provider/python/tests/: __init__.py  conftest.py  e2e_test.py  flaglogs_e2e_test.py  test_encrypted_state.py  test_flag_logger.py  test_local_resolver.py  test_materialization.py  test_provider.py  test_state_fetcher.py  test_wasm_resolver.py
openfeature-provider/ruby/: CHANGELOG.md  CLAUDE.md  Makefile
openfeature-provider/rust/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
openfeature-provider/rust/examples/: bench.rs  demo.rs
openfeature-provider/rust/src/: error.rs  gateway.rs  host.rs  lib.rs  logger.rs  materialization.rs  provider.rs  state.rs  test_utils.rs  version.rs
openfeature-provider/rust/tests/: e2e.rs
openfeature-provider/swift/: Package.resolved  Package.swift  README.md
unit-local-server/: Cargo.toml
unit-local-server/src/: main.rs
wasm-msg/: CLAUDE.md
wasm-msg/src/: sync.rs
wasm/proto/: messages.proto  types.proto
wasm/rust-guest/: CHANGELOG.md  CLAUDE.md  Cargo.toml  build.rs  test_encrypted_state.mjs
(+236 files in other folders)
