[workspace]
resolver = "2"  # Use the new resolver for edition 2021

members = [
    "wasm-msg",
    "wasm/rust-guest",
    "confidence-resolver",
    "confidence-cloudflare-resolver",
    "openfeature-provider/java",
    "openfeature-provider/js",
    "openfeature-provider/go",
    "openfeature-provider/rust"
]

# Exclude the Java provider from default workspace builds (cargo build --workspace)
# It's a dummy package for release-please tracking only, not meant to be built
default-members = [
    "wasm-msg",
    "wasm/rust-guest",
    "confidence-resolver",
    "confidence-cloudflare-resolver"
]
[profile.wasm]
inherits = "release"
opt-level = "s"  # Less aggressive than "z"
lto = false      # Disable LTO to debug optimization issues
codegen-units = 1
strip = "symbols"