[package]
name = "confidence-flag-log-ingest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
worker = { version = "0.6.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen = "0.2"
js-sys = "0.3"
uuid = { version = "1", features = ["v4", "js"] }
