[package]
name = "confidence_resolver"
version = "0.12.1"
edition = "2021"
description = "Local resolver for Confidence feature flags"
license = "Apache-2.0"
repository = "https://github.com/spotify/confidence-resolver"
homepage = "https://confidence.spotify.com/"
keywords = ["feature-flags", "confidence", "resolver"]
categories = ["development-tools"]
readme = "README.md"
include = ["src/**/*", "protos/**/*", "build.rs", "Cargo.toml", "README.md"]

[lib]
crate-type = ['rlib']

[features]
default = ["std", "json"]
std = ["chrono/clock", "rust-crypto-wasm"]
json = ["serde", "serde_json", "pbjson", "pbjson-types"]

[dependencies]
fastmurmur3 = "0.2.0"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
semver = { version = "1.0.20", default-features = false }
crc32fast = { version = "1.4.2", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }

prost = { version = "0.12", default-features = false, features = ["derive" ] }
prost-types = { version = "0.12", default-features = false }
bytes = { version = "1.4.0", default-features = false }
papaya = "0.2.3"
arc-swap = "1.7.1"
fastrand = "2"

# Optional dependency for std
rust-crypto-wasm = { version = "0.3.1", optional = true }
pbjson = { version = "0.6.0", optional = true }
pbjson-types = { version = "0.6.0", optional = true }
serde = { version = "1.0.189", optional = true }
serde_json = { version = "1.0.107", optional = true }
isocountry = "0.3.2"

[dev-dependencies]
regex = "1.10.2"

[build-dependencies]
prost-build = "0.12"
pbjson-build = { version = "0.6.0" }
prost-reflect = "0.13"

[package.metadata.cargo-machete]
ignored = ["pbjson", "pbjson-build", "prost-build"]